# chitrak-rl

./: CLAUDE.md  README.md  setup.sh
chitrak-rl/: .gitignore  EXPLAIN.md  LICENSE  README.md  SETUP_LOG.md
chitrak-rl/chitrak_bringup/: package.xml  setup.cfg  setup.py
chitrak-rl/chitrak_description/: setup.cfg  setup.py
chitrak-rl/chitrak_gait_planner/: setup.cfg  setup.py
chitrak-rl/chitrak_hardware_interface/: package.xml  setup.cfg  setup.py
chitrak-rl/chitrak_leg_controller/: package.xml  setup.cfg
chitrak-rl/chitrak_rl/: scene.xml
chitrak-rl/chitrak_sim/: package.xml  setup.cfg  setup.py
chitrak-rl/chitrak_teleop/: package.xml  setup.cfg  setup.py
chitrak-rl/isaac_lab_integration/: README.md  chitrak_asset.py  chitrak_env_cfg.py  chitrak_fixed.urdf  convert_urdf_to_usd.py  record_fall.py  verify_robot.py
chitrak_bringup/: package.xml  setup.py
chitrak_bringup/launch/: display.launch.py  gazebo_sim.launch.py
chitrak_description/: package.xml  setup.py
chitrak_description/config/: chitrak_params.yaml
chitrak_description/meshes/: torso_link.STL
chitrak_description/urdf/: chitrak.xacro
chitrak_gait_controller/: package.xml  setup.py
chitrak_gait_controller/chitrak_gait_controller/: body_motion_planner.py  gait_controller.py  gait_scheduler.py
chitrak_gait_planner/: package.xml
chitrak_gait_planner/chitrak_gait_planner/: gait_scheduler.py  (+1 more)
chitrak_leg_controller/: setup.py
chitrak_msgs/: CMakeLists.txt  package.xml
chitrak_rl/: chitrak.urdf  chitrak.xml  chitrak_env.py  chitrak_patched.xml  training.py
chitrak_sim/: setup.py
(+47 files in other folders)
